feat(products): add batch scan mode Closes: #59
